--- a/Designer/Themes/Standard.xaml
+++ b/Designer/Themes/Standard.xaml
@@ -47,11 +47,9 @@
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Label}">
-					<Grid>
-						<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" >
-							<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" RecognizesAccessKey="True"/>
-						</Border>
-					</Grid>
+					<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" >
+						<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" RecognizesAccessKey="True"/>
+					</Border>
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
@@ -140,7 +138,7 @@
 						</Trigger>
 						<MultiTrigger>
 							<MultiTrigger.Conditions>
-								<Condition Property="VerticalScrollBarVisibility" Value="Visible"/>
+								<Condition Property="VerticalScrollBarVisibility" Value="Auto"/>
 								<Condition Property="AcceptsReturn" Value="True"/>
 							</MultiTrigger.Conditions>
 							<MultiTrigger.Setters>
