--- a/Designer/Interface/Service/Method.xaml
+++ b/Designer/Interface/Service/Method.xaml
@@ -14,9 +14,13 @@
 		<Service:MethodRESTVerbsConverter x:Key="MethodRESTVerbsConverter" />
 		<Service:WebMessageBodyStyleConverter x:Key="WebMessageBodyStyleConverter"/>
 		<Service:WebMessageFormatConverter x:Key="WebMessageFormatConverter" />
+		<Service:ImpersonationOptionConverter x:Key="ImpersonationOptionConverter" />
+		<Service:ReleaseInstanceModeConverter x:Key="ReleaseInstanceModeConverter" />
+		<Service:TransactionFlowModeConverter x:Key="TransactionFlowModeConverter" />
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 	</Grid.Resources>
 	<Grid.RowDefinitions>
+		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
@@ -33,72 +37,7 @@
 	<pc:TextBox Text="{Binding Path=MethodData.ServerName}" Name="ServerName" Grid.Row="2" Height="23" Margin="110,5,5,5" ToolTip="{Binding Path=MethodData.ServerName}" />
 	<ToggleButton Content="Client Name:" Grid.Row="3" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Margin="5" HorizontalAlignment="Left" IsChecked="{Binding Path=MethodData.HasClientType}" />
 	<pc:TextBox Text="{Binding Path=MethodData.ClientName}" Name="ClientName" Grid.Row="3" Height="23" Margin="110,5,5,5" IsEnabled="{Binding Path=MethodData.HasClientType}" ToolTip="{Binding Path=MethodData.ClientName}" />
-	<Label Grid.Row="4" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
-	<Grid Grid.Row="5">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="1.5*"/>
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="0" Grid.Row="0" />
-		<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Grid.Row="0" Checked="Initiating_Checked" />
-		<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Grid.Row="0" Checked="Terminating_Checked" />
-		<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="0" />
-		<ComboBox Height="23" Margin="80,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="3" Grid.Row="0" >
-			<ComboBoxItem Content="None" />
-			<ComboBoxItem Content="Sign" />
-			<ComboBoxItem Content="Encrypt and Sign" />
-		</ComboBox>
-		<ToggleButton Content="Synchronous" IsChecked="{Binding Path=MethodData.UseSyncPattern}" Margin="5" Grid.Column="0" Grid.Row="1" />
-		<ToggleButton Content="Asynchronous" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="1" Grid.Row="1" />
-		<ToggleButton Content="Awaitable" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
-		<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="3" Grid.Row="1" />
-	</Grid>
-	<Grid Visibility="{Binding Path=MethodData.IsRESTMethod, Converter={StaticResource BoolVisibilityConverter}}" Grid.Row="6" Margin="0,5,0,0">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<Label Grid.Row="0" Content="REST" FontSize="12pt" Margin="0,5,0,0" />
-		<Label Content="URI Template:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" />
-		<pc:TextBox Text="{Binding Path=MethodData.REST.UriTemplate}" Height="23" Margin="111,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" Grid.ColumnSpan="2" />
-		<Label Content="HTTP Verb:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" />
-		<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.Method, Converter={StaticResource MethodRESTVerbsConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" >
-			<ComboBoxItem Content="GET" />
-			<ComboBoxItem Content="POST" />
-			<ComboBoxItem Content="PUT" />
-			<ComboBoxItem Content="DELETE" />
-		</ComboBox>
-		<Label Content="Body Style:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" />
-		<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.BodyStyle, Converter={StaticResource WebMessageBodyStyleConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" >
-			<ComboBoxItem Content="Bare" />
-			<ComboBoxItem Content="Wrapped" />
-			<ComboBoxItem Content="Wrapped Request" />
-			<ComboBoxItem Content="Wrapped Response" />
-		</ComboBox>
-		<Label Content="Request Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" />
-		<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.RequestFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" >
-			<ComboBoxItem Content="XML" />
-			<ComboBoxItem Content="JSON" />
-		</ComboBox>
-		<Label Content="Response Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" />
-		<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.ResponseFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" >
-			<ComboBoxItem Content="XML" />
-			<ComboBoxItem Content="JSON" />
-		</ComboBox>
-	</Grid>
-	<TabControl Grid.Row="7" Margin="0,10,0,0">
+	<TabControl Grid.Row="8" Margin="0,10,0,0">
 		<TabItem Padding="10,5" IsSelected="True">
 			<TabItem.Header>
 				<TextBlock Text="Parameters" FontSize="12pt"/>
@@ -159,6 +98,121 @@
 						</DataTemplate>
 					</ListBox.ItemTemplate>
 				</ListBox>
+			</Grid>
+		</TabItem>
+		<TabItem Padding="10,5" IsSelected="True">
+			<TabItem.Header>
+				<TextBlock Text="Options" FontSize="12pt"/>
+			</TabItem.Header>
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+				<Grid Grid.Row="0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+					<Label Grid.Row="0" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
+					<ToggleButton Content="Synchronous" IsChecked="{Binding Path=MethodData.UseSyncPattern}" Margin="5" Grid.Column="0" Grid.Row="1" />
+					<ToggleButton Content="Asynchronous" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="1" Grid.Row="1" />
+					<ToggleButton Content="Awaitable" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
+					<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="0" Grid.Row="2" />
+					<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Grid.Row="2" Checked="Initiating_Checked" />
+					<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Grid.Row="2" Checked="Terminating_Checked" />
+					<ToggleButton Content="Operation Behavior" IsChecked="{Binding Path=MethodData.HasOperationBehavior}" Margin="5" Grid.Column="0" Grid.Row="3" />
+					<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="1" Grid.Row="3" />
+					<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="3" />
+					<ComboBox Height="23" Margin="75,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="2" Grid.Row="3" >
+						<ComboBoxItem Content="None" />
+						<ComboBoxItem Content="Sign" />
+						<ComboBoxItem Content="Encrypt and Sign" />
+					</ComboBox>
+				</Grid>
+				<Grid Visibility="{Binding Path=MethodData.HasOperationBehavior, Converter={StaticResource BoolVisibilityConverter}}" Grid.Row="1" Margin="0,5,0,0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+					<Label Grid.Row="0" Content="Operation Behavior" FontSize="12pt" Margin="0,5,0,0" />
+					<Label Content="Impersonation:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+					<ComboBox Height="23" Margin="100,5,5,5" SelectedIndex="{Binding Path=MethodData.OBImpersonation, Converter={StaticResource ImpersonationOptionConverter}}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" >
+						<ComboBoxItem Content="Allowed" />
+						<ComboBoxItem Content="Not Allowed" />
+						<ComboBoxItem Content="Required" />
+					</ComboBox>
+					<Label Content="Release Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" />
+					<ComboBox Height="23" Margin="100,5,5,5" SelectedIndex="{Binding Path=MethodData.OBReleaseInstanceMode, Converter={StaticResource ReleaseInstanceModeConverter}}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="1" >
+						<ComboBoxItem Content="None" />
+						<ComboBoxItem Content="After" />
+						<ComboBoxItem Content="Before &amp; After" />
+						<ComboBoxItem Content="Before" />
+					</ComboBox>
+					<Label Content="Transaction Flow:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="2" />
+					<ComboBox Height="23" Margin="110,5,5,5" SelectedIndex="{Binding Path=MethodData.OBTransactionFlowMode, Converter={StaticResource TransactionFlowModeConverter}}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="2" >
+						<ComboBoxItem Content="None" />
+						<ComboBoxItem Content="Allowed" />
+						<ComboBoxItem Content="Mandatory" />
+						<ComboBoxItem Content="Not Allowed" />
+					</ComboBox>
+					<ToggleButton Content="Auto Dispose Parameters" IsChecked="{Binding Path=MethodData.OBAutoDisposeParameters}" Margin="5" Grid.Column="0" Grid.Row="2" />
+					<ToggleButton Content="Transation Auto Complete" IsChecked="{Binding Path=MethodData.OBTransactionAutoComplete}" Margin="5" Grid.Column="1" Grid.Row="2" />
+					<ToggleButton Content="Transaction Scope Required" IsChecked="{Binding Path=MethodData.OBTransactionScopeRequired}" Margin="5" Grid.Column="2" Grid.Row="2" />
+				</Grid>
+				<Grid Visibility="{Binding Path=MethodData.IsRESTMethod, Converter={StaticResource BoolVisibilityConverter}}" Grid.Row="2" Margin="0,5,0,0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+					<Label Grid.Row="0" Content="REST" FontSize="12pt" Margin="0,5,0,0" />
+					<Label Content="URI Template:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" />
+					<pc:TextBox Text="{Binding Path=MethodData.REST.UriTemplate}" Height="23" Margin="111,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" Grid.ColumnSpan="2" />
+					<Label Content="HTTP Verb:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" />
+					<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.Method, Converter={StaticResource MethodRESTVerbsConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" >
+						<ComboBoxItem Content="GET" />
+						<ComboBoxItem Content="POST" />
+						<ComboBoxItem Content="PUT" />
+						<ComboBoxItem Content="DELETE" />
+					</ComboBox>
+					<Label Content="Body Style:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" />
+					<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.BodyStyle, Converter={StaticResource WebMessageBodyStyleConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" >
+						<ComboBoxItem Content="Bare" />
+						<ComboBoxItem Content="Wrapped" />
+						<ComboBoxItem Content="Wrapped Request" />
+						<ComboBoxItem Content="Wrapped Response" />
+					</ComboBox>
+					<Label Content="Request Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" />
+					<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.RequestFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" >
+						<ComboBoxItem Content="XML" />
+						<ComboBoxItem Content="JSON" />
+					</ComboBox>
+					<Label Content="Response Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" />
+					<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.ResponseFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" >
+						<ComboBoxItem Content="XML" />
+						<ComboBoxItem Content="JSON" />
+					</ComboBox>
+				</Grid>
 			</Grid>
 		</TabItem>
 		<TabItem Padding="10,5">
